[gd_scene load_steps=17 format=3 uid="uid://en5brk4uudl7"]

[ext_resource type="Script" path="res://Popper/Popcorn/PopcornMachine.gd" id="1_vjala"]
[ext_resource type="PackedScene" uid="uid://btle6gcgxfnyq" path="res://Popper/Popcorn/Scoop.tscn" id="2_buv8w"]
[ext_resource type="Texture2D" uid="uid://druf3375rasc1" path="res://Assets/Popper.png" id="2_h343q"]
[ext_resource type="Texture2D" uid="uid://bf6aaklcywwji" path="res://Popper/Resources/ChuteBack.tres" id="4_8s5s4"]
[ext_resource type="Texture2D" uid="uid://bwlnq40f7ce25" path="res://Popper/Resources/Chute.tres" id="4_hxr4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7lwo"]
size = Vector2(10, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rpr8"]
size = Vector2(10, 182)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3rtx"]
size = Vector2(340, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apvm7"]
size = Vector2(340, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r0nr"]
atlas = ExtResource("2_h343q")
region = Rect2(256, 208, 128, 48)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6vylt"]
a = Vector2(-51.75, 2)
b = Vector2(52.25, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nbrle"]
size = Vector2(320, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fngmg"]
size = Vector2(319, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8nq5"]
size = Vector2(7.5, 37.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qrbm"]
size = Vector2(24, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5233"]
size = Vector2(24, 5)

[node name="PopcornMachine" type="Node2D"]
script = ExtResource("1_vjala")

[node name="Frame" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Frame"]
position = Vector2(-5, 91)
shape = SubResource("RectangleShape2D_b7lwo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Frame"]
position = Vector2(325, 91)
shape = SubResource("RectangleShape2D_0rpr8")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Frame"]
position = Vector2(160, 186)
shape = SubResource("RectangleShape2D_b3rtx")

[node name="TopFrame" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TopFrame"]
position = Vector2(160, -5)
shape = SubResource("RectangleShape2D_apvm7")

[node name="Compartment" type="StaticBody2D" parent="."]
position = Vector2(160, 61)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Compartment"]
position = Vector2(0, 7.5)
polygon = PackedVector2Array(-49, -28.5, -49, 14.5, 54, 14.5, 54, -28.5, 40, -28.5, 40, 6.5, -37, 6.5, -37, -28.5)

[node name="Sprite2D" type="Sprite2D" parent="Compartment"]
position = Vector2(15, -7)
texture = SubResource("AtlasTexture_5r0nr")
offset = Vector2(0, 7.5)

[node name="Lid" type="RigidBody2D" parent="Compartment"]
position = Vector2(3, -24)
mass = 0.5
max_contacts_reported = 300
contact_monitor = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Compartment/Lid"]
shape = SubResource("SegmentShape2D_6vylt")

[node name="Sprite2D" type="Sprite2D" parent="Compartment/Lid"]
offset = Vector2(3, -5)

[node name="Scoop" parent="." instance=ExtResource("2_buv8w")]
position = Vector2(306, 16)

[node name="Scoopable" type="Area2D" parent="."]
visible = false

[node name="Area1" type="CollisionShape2D" parent="Scoopable"]
position = Vector2(160, 133)
shape = SubResource("RectangleShape2D_nbrle")

[node name="Area2" type="CollisionShape2D" parent="Scoopable"]
position = Vector2(160.5, 18)
shape = SubResource("RectangleShape2D_fngmg")
disabled = true

[node name="Chute" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="ChuteRange" type="Area2D" parent="Chute"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chute/ChuteRange"]
position = Vector2(4, 74)
shape = SubResource("RectangleShape2D_g8nq5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chute"]
position = Vector2(12, 95)
shape = SubResource("RectangleShape2D_0qrbm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Chute"]
position = Vector2(12, 53)
shape = SubResource("RectangleShape2D_h5233")

[node name="Sprite2D2" type="Sprite2D" parent="Chute"]
z_index = -1
position = Vector2(28, 74)
texture = ExtResource("4_8s5s4")

[node name="Sprite2D" type="Sprite2D" parent="Chute"]
z_index = 1
position = Vector2(16, 74)
texture = ExtResource("4_hxr4t")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Compartment/Lid" to="." method="_on_lid_body_entered"]
[connection signal="body_entered" from="Scoopable" to="." method="_on_scoopable_body_entered"]
[connection signal="body_entered" from="Chute/ChuteRange" to="." method="_on_chute_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
